--- a/pom.xml
+++ b/pom.xml
@@ -78,4 +78,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.1stleg</groupId>
+            <artifactId>jnativehook</artifactId>
+            <version>LATEST</version>
+        </dependency>
+    </dependencies>
+
 </project>
