Add apache commons dependency

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>jnativehook</artifactId>
             <version>LATEST</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
